# Tutorials

AndroidStudioProjects/AnimalBook/: settings.gradle
AndroidStudioProjects/AnimalBook/app/: build.gradle
AndroidStudioProjects/MyCamera/app/: build.gradle
AndroidStudioProjects/MyCountdownTimer/: settings.gradle
AndroidStudioProjects/MyCountdownTimer/app/: build.gradle
AndroidStudioProjects/MyScheduler/: build.gradle  settings.gradle
AndroidStudioProjects/MyScheduler/app/: build.gradle
AndroidStudioProjects/MySize/: settings.gradle
AndroidStudioProjects/MySize/app/: build.gradle
AndroidStudioProjects/MySlideshow/: settings.gradle
AndroidStudioProjects/MySlideshow/app/: build.gradle
AndroidStudioProjects/TouristSights/: build.gradle  settings.gradle
AndroidStudioProjects/TouristSights/app/: build.gradle
IosProjects/MyFirst/MyFirst/: ContentView.swift  MyFirstApp.swift
IosProjects/MyFirst/MyFirst.xcodeproj/: project.pbxproj
Janken/app/: build.gradle
bitbank/: lambda_function.py
bitbank/chardet-4.0.0.dist-info/: RECORD
bitbank/python_bitbankcc-0.0.4.dist-info/: RECORD
fastapi/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
fastapi-official/: pyproject.toml
fastapi-official/fastapi_official/: main.py
fastapi/api/: db.py  main.py  migrate_db.py
fastapi/tests/: test_main.py
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
nuxt3/: nuxt.config.ts  package.json
nuxt3/composables/: todo.ts
nuxt3/pages/: index.vue
react/: package-lock.json
react/src/: App.js  FoodList.js  styles.css
taskbox/: package.json
(+135 files in other folders)
