[tool.poetry]
name = "fastapi-official"
version = "0.1.0"
description = ""
authors = ["hamada <hamada1207.daiki@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_official"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = {extras = ["standard"], version = "^0.28.0"}
isort = "^5.13.2"
black = "^24.3.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
